# bicod

./: Bicod.cabal  Bicod.hs  Makefile  README.md  Spec.hs
Database/: Bicod.hs
Database/Bicod/: Main.hs
test/: Spec.hs
